--- a/src/App.css
+++ b/src/App.css
@@ -32,13 +32,7 @@ Open Sans 400, 600, 700
 */
 
 body {
-	background-color: #444;
+	background-color: #fff;
 	font-family: 'Open sans';
 	min-height: 100vh;
-	/* overflow: hidden; */
-}
-
-/* temp */
-main {
-	background-color: white;
 }
