--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@ body {
 	font-family: 'Open sans';
 	min-height: 100vh;
 }
+
+/*
+
+Feqtures
+add margins in responsive desing
+add size to image in responsive desing
+*/
