--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -6,12 +6,12 @@
 .footer-section {
 	background-color: var(--very-dark-cyan);
 	color: white;
-	padding: 120px;
-	max-width: 1440px;
-	margin: 0 auto;
-
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
+	margin: 0 auto;
+	max-width: 1440px;
+	padding: 120px;
 }
 
 .footer__firstColumn {
@@ -20,8 +20,8 @@
 
 .footer__logo--white {
 	color: white;
-	width: 300px;
 	filter: brightness(0) saturate(100%) invert(100%);
+	width: 300px;
 }
 
 .footer__description {
@@ -30,11 +30,11 @@
 }
 
 .footer__list {
-	list-style: none;
-	margin-top: 24px;
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
+	list-style: none;
+	margin-top: 24px;
 }
 
 .footer__list li {
@@ -43,14 +43,20 @@
 }
 
 .footer__icons {
-	margin-top: 80px;
-	width: 144px;
 	display: flex;
 	justify-content: space-between;
+	margin-top: 80px;
+	width: 144px;
 }
 
 .icon-fb:hover {
+	box-shadow: 5px 5px 0 0 black;
 	fill: #4267b2;
+}
+
+.icon-tw:hover {
+	box-shadow: 5px 5px 0 0 black;
+	fill: #1da1f2;
 }
 
 .footer__secondColumn {
@@ -65,26 +71,37 @@
 .footer__newsletterText {
 	font-size: 0.875rem;
 	line-height: 1.5rem;
-	max-width: 342px;
 	margin-top: 16px;
+	max-width: 342px;
 }
 
 .footer__form {
-	margin-top: 40px;
-	width: 100%;
 	display: flex;
 	justify-content: space-between;
+	margin-top: 40px;
+	width: 100%;
 }
 
 .footer__input {
-	width: 320px;
-	height: 48px;
-	border-radius: 6px;
-	padding: 14px;
-	font-size: 1.25rem;
-	outline: none;
-	color: var(--very-dark-cyan);
 	border: 1px solid transparent;
+	border-radius: 6px;
+	color: var(--very-dark-cyan);
+	font-size: 1.25rem;
+	height: 48px;
+	outline: none;
+	padding: 14px;
+	width: 320px;
+}
+
+.footer__input--error {
+	border: 1px solid var(--light-red);
+	border-radius: 6px;
+	color: var(--very-dark-cyan);
+	font-size: 1.25rem;
+	height: 48px;
+	outline: none;
+	padding: 14px;
+	width: 320px;
 }
 
 .footer__input:focus {
@@ -97,18 +114,50 @@
 	line-height: 1.5rem;
 }
 
+.footer__input--messageOk {
+	color: var(--pink);
+	font-size: 0.75rem;
+	line-height: 1.5rem;
+}
+
 .footer__btn {
-	width: 160px;
-	height: 48px;
+	background-color: var(--pink);
 	border-radius: 6px;
-	outline: none;
-	font-size: 1rem;
 	color: #fff;
 	font-family: 'Open sans';
-	background-color: var(--pink);
+	font-size: 1rem;
 	font-weight: 700;
+	height: 48px;
+	outline: none;
+	width: 160px;
 }
 
 .footer__btn:hover {
 	background-color: var(--light-pink);
+}
+
+@media (max-width: 1200px) {
+	.footer-section {
+		padding: 80px;
+	}
+}
+
+@media (max-width: 700px) {
+	.footer__input {
+		width: 100%;
+	}
+
+	.footer__input--error {
+		width: 100%;
+	}
+
+	.footer__form {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+	}
+
+	.footer__btn {
+		align-self: end;
+	}
 }
